// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Shape Props border_radius items: full 1`] = `
<span class="e-bolt-shape e-bolt-shape--small e-bolt-shape--border-radius-full">
  <span class="e-bolt-shape__content">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Props border_radius items: large 1`] = `
<span class="e-bolt-shape e-bolt-shape--small e-bolt-shape--border-radius-large">
  <span class="e-bolt-shape__content">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Props border_radius items: none 1`] = `
<span class="e-bolt-shape e-bolt-shape--small e-bolt-shape--border-radius-none">
  <span class="e-bolt-shape__content">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Props border_radius items: small 1`] = `
<span class="e-bolt-shape e-bolt-shape--small e-bolt-shape--border-radius-small">
  <span class="e-bolt-shape__content">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Props size items: large 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Props size items: medium 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Props size items: small 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Props size items: xlarge 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape default 1`] = `
<span class="e-bolt-shape e-bolt-shape--small e-bolt-shape--border-radius-full">
  <span class="e-bolt-shape__content">
    This is a shape
  </span>
</span>
`;
